--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-VITE_APP_API_PROTOCOL=https
+VITE_APP_API_PROTOCOL=http
 VITE_APP_API_BASE_URL=/api
-VITE_APP_API_PORT=443
-VITE_APP_API_SERVICE_URL=http://localhost:3000
+VITE_APP_API_SERVICE_URL=http://localhost
+
+VITE_APP_AUTH_VK_URL=http://localhost/auth/vk
