--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@internationalized/date": "^3.5.3",
     "@radix-icons/vue": "^1.0.0",
+    "@vee-validate/zod": "^4.12.7",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -27,8 +28,10 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul-vue": "^0.1.0",
+    "vee-validate": "^4.12.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.205",
