--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 VITE_APP_API_PROTOCOL=http
 VITE_APP_API_BASE_URL=/api
-VITE_APP_API_SERVICE_URL=http://localhost
+VITE_APP_API_HOST=localhost
+VITE_APP_API_SERVICE_PORT=80
 
-VITE_APP_AUTH_VK_URL=http://localhost/auth/vk
+VITE_APP_AUTH_VK_URL=http://localhost/api/auth/vk
