--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "http-status-codes": "^2.3.0",
     "pinia": "^2.1.7",
     "radix-vue": "^1.7.2",
     "tailwind-merge": "^2.3.0",
