--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@internationalized/date": "^3.5.3",
     "@radix-icons/vue": "^1.0.0",
-    "@vee-validate/zod": "^4.12.7",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -26,13 +25,13 @@
     "http-status-codes": "^2.3.0",
     "pinia": "^2.1.7",
     "radix-vue": "^1.7.2",
+    "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul-vue": "^0.1.0",
     "vee-validate": "^4.12.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "zod": "^3.23.6"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.205",
