--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@formkit/tempo": "^0.1.1",
     "@internationalized/date": "^3.5.3",
     "@radix-icons/vue": "^1.0.0",
     "@vueuse/core": "^10.9.0",
